projekt skizze methodik angepasst

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # output PDF
 
-/latex/template.pdf
+/latex/miniprojekt_waermepumpe.pdf.pdf
 projekt_skize.pdf
 
 # Created by https://www.gitignore.io/api/latex
